hasqd/tests/coptest/system/pos/001.inp
#comment
a = [ recpwd _md5 0 dn pass ]
print a
show
del a
show

quit
