hasqd/tests/coptest/system/neg/005.inp
a = [ aaa 
b = { a }
print b
del c
quit

